Fix: overflow work

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ body {
     font-size: 1.6rem;
     background-color: rgba(59, 130, 246, 0.5);
     font-family: "PT Serif", serif;
+    overflow-x: hidden;
 }
 img,
 picture,
